e2e/__tests__/__snapshots__/moduleNameMapper.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moduleNameMapper correct configuration 1`] = `
"PASS __tests__/index.js
  ✓ moduleNameMapping correct configuration"
`;

exports[`moduleNameMapper correct configuration mocking module of absolute path 1`] = `
"PASS __tests__/index.js
  ✓ moduleNameMapping correct configuration"
`;

exports[`moduleNameMapper wrong array configuration 1`] = `
"FAIL __tests__/index.js
  ● Test suite failed to run

    Configuration error:

    Could not locate module ./style.css mapped as:
    [
      "no-such-module",
      "no-such-module-2"
    ].

    Please check your configuration for these entries:
    {
      "moduleNameMapper": {
        "/\\.(css|less)$/": "[
          "no-such-module",
          "no-such-module-2"
        ]"
      },
      "resolver": undefined
    }

       8 | 'use strict';
       9 |
    > 10 | require('./style.css');
         | ^
      11 |
      12 | module.exports = () => 'test';
      13 |

      at createNoMappedModuleFoundError (../../packages/jest-resolve/src/resolver.ts:842:17)
      at Object.require (index.js:10:1)
      at Object.require (__tests__/index.js:10:20)"
`;

exports[`moduleNameMapper wrong configuration 1`] = `
"FAIL __tests__/index.js
  ● Test suite failed to run

    Configuration error:

    Could not locate module ./style.css mapped as:
    no-such-module.

    Please check your configuration for these entries:
    {
      "moduleNameMapper": {
        "/\\.(css|less)$/": "no-such-module"
      },
      "resolver": undefined
    }

       8 | 'use strict';
       9 |
    > 10 | require('./style.css');
         | ^
      11 |
      12 | module.exports = () => 'test';
      13 |

      at createNoMappedModuleFoundError (../../packages/jest-resolve/src/resolver.ts:842:17)
      at Object.require (index.js:10:1)
      at Object.require (__tests__/index.js:10:20)"
`;
